更新日志:
v0.8.3
1.修复了不能通过代理访问使用后台的问题.
2.增加了几个控制session的配置项,登录默认过期时间是20小时.
3.session存储可以选择内存或者文件.

v0.8.2 2018/05/30
修复了：
1. 系统登录验证码改成可配置方式，见配置文件 captcha 配置
2. 节点列表增加备注
3. 系统导航条上增加版本标志
4. 节点列表状态显示节点版本
5. 修复了添加项目和修改项目时，目录所属用户为非必填
6. 修复了任务列表页显示获取taskId失败问题
7. 登录 cookie 时长改成可配置，见配置文件 author.expire_time 字段

注意：
第 4 点想要显示节点版本号，节点 agent 必须是 v0.8.4 以上，否则版本显示为 null
--------------------------------------------------------------------
v0.8.1 2018/04/04
修复了：
1. 修改 tcp 通讯增加解拆包逻辑
1. 修改 tls 握手超时时间
--------------------------------------------------------------------
v0.8 更新日志：
1. 修复项目列表发布类型选择 ssh Bug
2. 修复授权普通用户页面修改无法保存Bug
3. 修复发布项目列表数据显示异常Bug
4. 修复普通用户我的项目总数统计Bug