@@ -9,3 +9,4 @@
 bzppx-codepub
 install/install
 release*
+.sessions.cp
