@@ -12,9 +12,9 @@ author.passport="cp_ppassport"
 author.passport_use_ip=false
 sessionon=true
 sessionname="cpssid"
-#file,memory
-sessionprovider="memory"
-sessionproviderconfig="/tmp/.sessions.cp"
+#file,memory,file
+sessionprovider="file"
+sessionproviderconfig=".sessions.cp"
 sessiongcmaxlifetime=72000
 
 [db]
