@@ -1,8 +1,14 @@
 更新日志:
 v0.8.3
-1.修复了不能通过代理访问使用后台的问题.
-2.增加了几个控制session的配置项,登录默认过期时间是20小时.
-3.session存储可以选择内存或者文件.
+1. 修复了不能通过代理访问使用后台的问题.
+2. 增加了几个控制session的配置项,登录默认过期时间是20小时.
+3. session存储可以选择内存或者文件.
+4. 修复 #17 项目发布历史显示发布人账号都是admin，有其他账号发布的
+5. 修复 #21 项目配置里面前置和后置命令不显示
+6. 增加功能 #23 在项目管理->项目列表添加项目复制功能
+7. 增加功能 #18 项目灰度发布功能（发布可以自由选定结点）
+注意：
+ALTER TABLE cp_project ADD COLUMN `is_grayscale_publish` tinyint(1) NOT NULL DEFAULT '0' COMMENT '是否开启灰度发布 0 否 1 是' AFTER is_delete;
 
 v0.8.2 2018/05/30
 修复了：
